# After-sales

./: .eslintrc.json  .gitignore  BACKEND_ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DDD_IMPROVEMENT_SUMMARY.md  DEVELOPMENT.md  Dockerfile.frontend  EXECUTION_COMPLETION_REPORT_20251218_164410.md  EXECUTION_PROGRESS_REPORT_20251218.md  EXECUTION_QUALITY_REPORT.md  FRONTEND_ARCHITECTURE.md  FRONTEND_ISSUES_ANALYSIS.md  FULL_EXECUTION_COMPLETION_REPORT.md  GOVERNANCE_TRANSFORMATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  LICENSE  PRODUCTION_READINESS_PLAN.md  PROJECT_COMPLETION_AND_UPGRADE_PLAN.md  PROJECT_QUALITY_ASSESSMENT.md  QUICK_START.md  README.md  TECHNICAL_DESIGN.md  TEST_RESULTS.md  app.html  chat-input-optimized.html  docker-compose.yml  index.html  login.html  netlify.toml  package-lock.json  package.json  playwright.config.cjs  runtime-config.js  start-all.sh  stop-all.sh  test-api.html  test-business-flow.sh  vite.config.js  vitest.config.js
agentscope-service/: .coverage  Dockerfile  Makefile  README.md  coverage.xml  demo.html  pyproject.toml  requirements.txt
agentscope-service/src/agents/: __init__.py  assistant_agent.py  base_agent.py  customer_service_agent.py  engineer_agent.py  fault_agent.py  human_agent_adapter.py  inspector_agent.py  knowledge_manager_agent.py  quality_inspector_agent.py  requirement_collector_agent.py  sentiment_analyzer_agent.py
agentscope-service/src/api/: main.py  state.py
agentscope-service/src/api/routes/: __init__.py  agents.py  chat.py  events.py
agentscope-service/src/config/: settings.py
agentscope-service/src/events/: __init__.py  bridge.py
agentscope-service/src/memory/: __init__.py  persistent_memory.py
agentscope-service/src/prompts/: agent_prompt.py  loader.py
agentscope-service/src/router/: __init__.py  adaptive_router.py  orchestrator_agent.py
agentscope-service/src/tools/: __init__.py  custom_tools.py  mcp_tools.py  persistence.py
agentscope-service/tests/: conftest.py  test_agent_prompt_injection.py  test_agent_support.py  test_assistant_agent.py  test_custom_tools.py  test_engineer_agent.py  test_engineer_agent_extras.py  test_event_bridge.py  test_events_bridge.py  test_inspector_agent.py  test_mcp_tools.py  test_orchestrator_agent.py  test_prompts_loader.py  test_settings.py  test_stage_config_loader.py
backend/: .env.example  .env.test  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  coverage-report.txt  package-lock.json  package.json  test-ai-connection.ts  test-ai-simple.ts  tsconfig.json  vitest.config.ts
docs/: AI_SERVICE_INTEGRATION_GUIDE.md  API_DESIGN.md  ARCHITECTURE_SUMMARY.md  CONTEXT_IMPLEMENTATION_PLAN.md  DELIVERY_REPORT.md  DOCKER_GUIDE.md  DOCUMENT_CLEANUP_REPORT.md  EVENT_DRIVEN_ARCHITECTURE.md  EXECUTION_REPORT_20260126_FINAL.md  FRONTEND_COMPLETION_ANALYSIS.md  MODULE_BACKLOG.md  PRODUCTION_AUDIT.md  PRODUCTION_GAPS_MATRIX.md  PRODUCTION_READINESS_PLAN.md  PROJECT_COMPLETION_ASSESSMENT.md  PROJECT_RESTRUCTURE_PLAN.md  QUICK_START.md  README.md  TAXKB_INTEGRATION_ASSESSMENT.md  TAXKB_INTEGRATION_SOLUTION.md  TECHNICAL_SOLUTIONS.md  TaxKB-API-v3.1-使用说明.md  事件格式.md
monitoring/: prometheus.yml
nginx/: nginx.conf
public/: _redirects  runtime-config.js
scripts/: README.md  execute-full-upgrade.sh  generate-docs.sh  (+3 more)
tests/: P0_GAPS.md  (+5 more)
(+1010 files in other folders)
